Added background banner

--- a/css/style.css
+++ b/css/style.css
@@ -978,7 +978,7 @@
 
 	#banner {
 		background-color: #666666;
-		background-image: url("../images/banner.jpg");
+		background-image: url("../images/cat_circularsawblades_1(3).jpg");
 		background-size: cover;
 		background-position: center center;
 		background-repeat: no-repeat;
