--- a/css/style.css
+++ b/css/style.css
@@ -995,7 +995,7 @@
 			top: 0;
 			width: 100%;
 			height: 50%;
-			background: rgba(64, 72, 80, 0.25);
+			/*background: rgba(64, 72, 80, 0.25);*/
 		}
 
 		#banner .inner {
